<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:layout_marginStart="16dp"
    android:layout_marginTop="16dp"
    android:layout_marginEnd="16dp"
    android:layout_marginBottom="8dp"
    android:backgroundTint="@color/color_background_card"
    app:cardCornerRadius="20dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp">

        <ImageView
            android:id="@+id/img_circle_color"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:contentDescription="@string/cd_img_icon_task"
            android:src="@drawable/ic_baseline_radio_button_yellow"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt_title_task"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/roboto"
            android:gravity="start"
            android:singleLine="true"
            android:text="@string/txt_title_task"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/txt_description_task"
            app:layout_constraintEnd_toStartOf="@id/img_more_options"
            app:layout_constraintStart_toEndOf="@id/img_circle_color"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt_description_task"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/roboto"
            android:gravity="start"
            android:singleLine="true"
            android:text="@string/txt_descriptions"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/img_more_options"
            app:layout_constraintStart_toEndOf="@id/img_circle_color"
            app:layout_constraintTop_toBottomOf="@id/txt_title_task" />

        <ImageView
            android:id="@+id/img_more_options"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:contentDescription="@string/cd_img_more_options"
            android:src="@drawable/ic_baseline_more_horiz_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@android:color/white" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>